--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Alphabot-Md",
+  "name": "Mitsuha-Md",
   "version": "1.1.5",
-  "description": "Alphabot Md, Only update in YouTube ZEEONE OFC",
+  "description": "If you want to get github,please contact my owner...",
   "main": "zeeone.js",
   "license": "MIT",
   "scripts": {
